# MediaCodec

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sharp/ambition/mediacodecdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_android_rtmpvideo_RtmpJni.cpp  com_android_rtmpvideo_YuvOperateJni.cpp  com_sharp_ambition_mediacodecdemo_NativeBridge.cpp  com_sharp_ambition_mediacodecdemo_NativeBridge.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/cpp/rtmpjni/: CRtmpWrap.h
app/src/main/java/com/android/rtmpvideo/: AVEncoder.java  AudioGather.java  MediaPublisher.java  RtmpActivity.java  RtmpJni.java  RtmpPublisher.java  SurfacePreview.java  VideoGather.java  YuvEngineWrap.java  YuvOperateJni.java
app/src/main/java/com/sharp/ambition/mediacodecdemo/: AbsShape.kt  AudioCodecThread.kt  CharacterAnimationFromCameraActivity.kt  CharacterView.kt  DisplayShapeRenderer.kt  DisplayShapeView.kt  Ext.kt  ImageRenderer.kt  ImageUtil.java  MainActivity.kt  MediaCodecDecorate.kt  MediaCodecService.kt  NativeBridge.java  OpenGLActivity.kt  Triangle.kt  (+10 more)
app/src/main/jni/: com_sharp_ambition_mediacodecdemo_NativeBridge.cpp  com_sharp_ambition_mediacodecdemo_NativeBridge.h
app/src/main/res/layout/: activity_egl_player.xml  activity_main.xml  activity_opengl.xml  activity_record_from_camera.xml  activity_record_from_projection.xml  activity_rtmp.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
renderscript-toolkit/: build.gradle
(+8 files in other folders)
